<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chaoli forum</string>
    <string name="username">Username</string>
    <string name="avatar">Avatar</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="signature">Signature</string>
    <string name="user_status">User status</string>
    <string-array name="languages_array">
        <item>简体中文</item>
        <item>English</item>
		<item>繁體中文</item>
    </string-array>
    <string name="notify_me_when_receiving_personal_conversation">notify me when receiving personal conversation</string>
    <string name="star_conversations_i_post_automatically">star conversations I post automatically</string>
    <string name="star_personal_conversations_i_joined_automatically">star personal conversations I joined automatically</string>
    <string name="hide_online">hide online</string>
    <string name="save_settings">Save</string>
    <string name="change_avatar">change avatar</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="retype_password">Retype password</string>
	<string name="reply">Reply</string>
	<string name="login">Login</string>
	<string name="channel.caff">Caff</string>
	<string name="channel.ad">Ad</string>
	<string name="channel.maths">Maths</string>
	<string name="channel.physics">Physics</string>
	<string name="channel.chem">Chem</string>
	<string name="channel.biology">Biology</string>
	<string name="channel.tech">Tech</string>
	<string name="channel.test">Test</string>
	<string name="channel.admin">Admin</string>
	<string name="channel.court">Court</string>
	<string name="channel.announ">Announ</string>
	<string name="channel.others">Others</string>
	<string name="channel.socsci">Soc. Sci.</string>
	<string name="channel.lang">Lang</string>
	<string name="channel.caff.detail">Adding water, chatting and surfing.</string>
	<string name="channel.ad.detail">Reserved for sponsors.</string>
	<string name="channel.maths.detail">Ready for surfing for the ocean of mathematics?</string>
	<string name="channel.physics.detail">The energy parallels with momentum to fly, the space share the same scene with the time.</string>
	<string name="channel.chem.detail">Academic with chemistry, with various of chemical experiments!</string>
	<string name="channel.biology.detail">Collections about biological science from molecule to biosystem.</string>
	<string name="channel.tech.detail">Why not ask for The Magic Conch?</string>
	<string name="channel.test.detail">Test new functions, and report problems.</string>
	<string name="channel.admin.detail">Central govern of Chaoli Forum</string>
	<string name="channel.court.detail">Punishment from manager and appeal from user.</string>
	<string name="channel.announ.detail">Forum affair announcement</string>
	<string name="channel.socsci.detail">Social science</string>
	<string name="channel.lang.detail">Language learning discussion</string>
	<string name="channel.others.detail"><![CDATA[Language & Social science]]></string>
	<string name="network_err">Network error. Please try again.</string>
	<string name="network_err_open_login_page">Failed at open login page.</string>
	<string name="network_err_get_token">Failed at get token on login page.</string>
	<string name="network_err_login">Failed at login.</string>
	<string name="login_err_wrong_name_pwd">Wrong username or password.</string>
	<string name="network_err_homepage">Failed at open homepage.</string>
	<string name="login_err_cookie_expire">Cookie expired.</string>
	<string name="login_err_empty">Empty username or password.</string>
	<string name="should_not_be_null">should not be null.</string>
	<string name="and_password">and password</string>
	<string name="settings">Settings</string>
	<string name="share">Share</string>
	<string name="author_only">Author only</string>
	<string name="star">Star</string>
	<string name="ignore_this">Ignore this post</string>
	<string name="mark_as_unread">Mark as unread</string>
	<string name="cancel_author_only">Cancel author only</string>
	<string name="save_as_draft">Save as draft</string>
	<string name="purge">Purge</string>
	<string name="click_login">Click avatar to login</string>
	<string name="ignore_this.success">Ignore this post success.</string>
	<string name="ignore_this.failure">Ignore this post failed. Status code: $1%d.</string>
	<string name="star.success">Star success.</string>
	<string name="star.failure">Star failed. Status code: $1%d.</string>
	<string name="ignore_this.cancel.failure">Cancel ignore this post failed. Status code: $1%d.</string>
	<string name="star.cancel.failure"> Cancel star failed. Status code: $1%d.</string>
	<string name="star.cancel.success">Cancel star success.</string>
	<string name="ignore_this.cancel.success">Cancel ignore this post success.</string>
	<string name="failed">Failed. Status code: $1%d.</string>
	<string name="navigation_drawer_open">Open drawer</string>
	<string name="navigation_drawer_close">Close drawer</string>
	<string name="channel.all">All</string>
	<string name="channel.all.detail">All</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="refresh_succeed">Refresh succeed</string>
	<string name="refresh_failed">Refresh failed</string>
	<string name="refresh_fail">Refresh fail</string>
	<string name="load_succeed">Load succeed</string>
	<string name="load_fail">Load fail</string>
	<string name="pull_to_refresh">Pull to refresh</string>
	<string name="pullup_to_load">Pull up to load</string>
	<string name="release_to_refresh">Release to refresh</string>
	<string name="release_to_load">Release to load</string>
	<string name="refreshing">Refreshing..</string>
	<string name="loading">Loading..</string>
	<string name="opened_a_conversation">opened a conversation</string>
	<string name="updated">updated %s</string>
	<string name="modified_his_or_her_information"> modified his/her information</string>
	<string name="loading_posts">Loading posts...</string>
	<string name="just_a_sec">Just a sec...</string>
	<string name="username_has_been_used">Username has been used</string>
	<string name="email_has_been_used">Email has been used</string>
	<string name="wrong_captcha">Wrong captcha</string>
	<string name="sign_up_error">Sign up error, please try again</string>
	<string name="sign_up_successfully">Sign up successfully</string>
	<string name="at_least_six_character">At least six character</string>
	<string name="should_be_same_with_password">Should be same with password</string>
	<string name="error_when_retrieving_captcha">Error when retrieving captcha, please refresh</string>
	<string name="refresh">Refresh</string>
	<string name="invaild_email">Invaild email</string>
	<string name="you_dont_answer_enough_quesitions_correctly">Sorry, you don\'t answer enough questions correctly. Would you like to try again?</string>
	<string name="try_again">Try again</string>
	<string name="dont_try_again">No, thanks.</string>
	<string name="logging_in">Logging in...</string>
	<string name="channel_recycled">Recycled</string>
	<string name="post">Post</string>
	<string name="logout">Logout</string>
	<string name="config">Config</string>
	<string name="logout_success">Logout success</string>
	<string name="activity">Activity</string>
	<string name="statistics">Statistics</string>
	<string name="dont_have_an_account">Don\'t have an account?</string>
	<string name="answer_quesiton">Answer Question</string>
	<string name="if_you_have_an_invite_code">If you have an invite code, you can</string>
	<string name="sign_up_directly">Sign up directly</string>
	<string name="you_can_only_sign_up_with_an_invite_code">You can only sign up with an invite code</string>
	<string name="please_enter_your_invite_code">Please enter your invite code</string>
	<string name="sign_up">Sign up</string>
	<string name="captcha">Captcha</string>
	<string name="join_the_forum">Join the forum</string>
	<string name="days_ago">%d day(s) ago</string>
	<string name="weeks_ago">%d week(s) ago</string>
	<string name="months_ago">%d month(s) ago</string>
	<string name="today">Today</string>
	<string name="this_user_has_not_set_signature">This user hasn\'t set signature yet~</string>
	<string name="send_you_a_private_post">%s send you a private post</string>
	<string name="mention_you">%s mentioned you</string>
	<string name="someone_update">%s updated</string>
	<string name="collapse">collapse  ↑</string>
	<string name="expand">expand  ↓</string>
	<string name="navigation_drawer_clode">Close drawer</string>
	<string name="comma" translatable="false">%s, %s</string>
	<string name="length_of_username_should_be_between_4_and_21">The length of username should between 4 and 21</string>
	<string name="title">Title</string>
	<string name="content">Content</string>
	<string name="search_conversations">Search conversations...</string>
	<string name="search">Search</string>
	<string name="reply_hint">Please enter your reply here.</string>
	<string name="modified_successfully">Modified successfully</string>
	<string name="fail_on_modifying">Fail on modifying, please try again later.</string>
	<string name="useless_option" translatable="false">这是一个凑数的选项</string>
	<string name="content_cannot_be_null">Content cannot be null</string>
	<string name="descend">Descend</string>
	<string name="ascend">Ascend</string>
	<string name="error_click_to_retry">Error, click to retry</string>
	<string name="click_once_more_to_exit">Click once more to exit</string>
	<string name="app_settings">App settings</string>
	<string name="click_twice_to_exit">Click twice to exit</string>
	<string name="network_error_click_to_retry_again">Network errer, click to retry again</string>
	<string name="retrieving_new_data">Retrieving new data...</string>
	<string name="welcome_to_demo_mode">hi, welcome to demo mode by clicking function button. In demo mode, your LaTeX [surrounded by $ or \\( and \\)] will be displayed as image. Just wait for a second~</string>
	<string name="reply_successfully">Reply successfully</string>
	<string name="conversation_has_been_deleted">Oops, conversation has been deleted</string>
	<string name="please_login">Please Login</string>
	<string name="night_mode">night mode (experimental)</string>
	<string name="exist_inviting_code_message">Hi, it seems that you have already passed the quiz but not signed up yet. Would you like to sign up directly?</string>
	<string name="exist_inviting_code_message_2">Are you sure? Maybe you have to answer questions again.</string>
	<string name="share_message">via Chaoli Forum</string>
	<string name="not_support_temporarily">Not support this kind of link temporarily, please use browser instead.</string>
</resources>
