<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.daquexian.chaoli.forum.viewmodel.SettingsVM"/>
    </data>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<include layout="@layout/custom_toolbar"
                app:layout_scrollFlags="scroll|enterAlways" />-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/tl_custom"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways" />
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <TextView style="@style/TitleInSettings"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avatar"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.daquexian.chaoli.forum.meta.AvatarView
                        android:id="@+id/iv_avatar"
                        android:layout_marginLeft="10dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>
                    <Button
                        android:id="@+id/btn_change_avatar"
                        android:onClick="@{() -> viewModel.clickChangeAvatar()}"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_avatar"/>
                    <!--<ImageView
                        android:id="@+id/iv_new_avatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"/>-->
                </LinearLayout>

                <View style="@style/Divider"/>
                <TextView style="@style/TitleInSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"/>
                <CheckBox
                    android:id="@+id/chk_private_add"
                    android:checked="@={viewModel.privateAdd}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notify_me_when_receiving_personal_conversation"/>
                <CheckBox
                    android:id="@+id/chk_star_on_reply"
                    android:checked="@={viewModel.starOnReply}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star_conversations_i_post_automatically"/>
                <CheckBox
                    android:id="@+id/chk_star_private"
                    android:checked="@={viewModel.starPrivate}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star_personal_conversations_i_joined_automatically"/>

                <View style="@style/Divider"/>
                <TextView style="@style/TitleInSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"/>
                <CheckBox
                    android:id="@+id/chk_hide_online"
                    android:checked="@={viewModel.hideOnline}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_online"/>

                <View style="@style/Divider"/>
                <TextView style="@style/TitleInSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signature"/>
                <EditText
                    android:id="@+id/edtTxt_signature"
                    android:text="@={viewModel.signature}"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View style="@style/Divider"/>
                <TextView style="@style/TitleInSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_status"/>
                <EditText
                    android:id="@+id/edtTxt_user_status"
                    android:text="@={viewModel.userStatus}"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View style="@style/Divider"
                    android:layout_marginTop="20dp"/>

                <TextView style="@style/TitleInSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_settings"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_twice_to_exit"
                    android:checked="@={viewModel.clickTwiceToExit}"/>

                <View style="@style/Divider"
                    android:layout_marginTop="20dp"/>
                <Button
                    android:id="@+id/btn_save"
                    android:onClick="@{() -> viewModel.save()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/save_settings"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>
